--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ params:
   keywords: [Blog, Portfolio ]
   author: Niklas Saari
   # author: ["Me", "You"] # multiple authors
-  images: ["<link or path of image for opengraph, twitter-cards>"]
+  # images: ["/images/binary.svg"]
   DateFormat: "January 2, 2006"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
@@ -51,16 +51,14 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    favicon: "/images/binary.svg"
+    apple_touch_icon: "/images/binary.svg"
+    safari_pinned_tab: "/images/binary.svg"
 
   label:
     text: "Home"
-    icon: /apple-touch-icon.png
-    iconHeight: 35
+    icon: /images/binary.svg
+    iconHeight: 25
 
   # profile-mode
   profileMode:
