Starting new post

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "https://nicce.dev/"
-title: Curiosity dooms us
+title: A blog about computer systems
 copyright: © 2023 Niklas Saari
 paginate: 5
 theme: PaperMod
