--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1",
-    "rehype-expressive-code": "^0.40.2",
-    "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.1",
     "unified": "^11.0.5"
   },
   "devDependencies": {
@@ -27,6 +24,11 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "tailwindcss": "^4.0.8",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-imagetools": "^7.0.5",
+    "rehype-expressive-code": "^0.40.2",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.1"
   }
 }
