--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "dependencies": {
     "@expressive-code/plugin-line-numbers": "^0.41.0",
     "@mdx-js/react": "^3.1.0",
-    "@mdx-js/rollup": "^3.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.3",
-    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.21",
     "isbot": "^5.1.26",
     "react": "^19.1.0",
@@ -20,15 +18,20 @@
     "@deno/vite-plugin": "^1.0.2",
     "@react-router/dev": "^7.5.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@mdx-js/rollup": "^3.1.0",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
+    "@types/mdx": "^2.0.13",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.6",
     "vite-imagetools": "^7.0.5",
-    "rehype-expressive-code": "^0.41.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.2"
+    "remark-rehype": "^11.1.2",
+    "shiki": "^3.2.2",
+    "@shikijs/langs": "^3.2.2",
+    "@shikijs/rehype": "^3.2.2",
+    "@shikijs/themes": "^3.2.2"
   }
 }
