--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
+    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.21",
