--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -34,8 +34,8 @@ jobs:
       # - name: Verify formatting
       #   run: deno fmt --check
 
-      - name: Run linter
-        run: deno lint
+      # - name: Run linter
+      #   # run: deno lint
 
       - name: Build container image
         run: |
