--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -40,3 +40,9 @@ jobs:
       - name: Build container image
         run: |
           docker build -t ghcr.io/nicceboy/denoblog:latest .
+
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Push to registry
+        run: docker push ghcr.io/nicceboy/denoblog:latest
