--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -16,6 +16,7 @@ on:
 
 permissions:
   contents: read
+  packages: write
 
 jobs:
   test:
@@ -30,7 +31,7 @@ jobs:
         uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31 # v1.1.2
         with:
           deno-version: v1.x
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
+
       # - name: Verify formatting
       #   run: deno fmt --check
 
