--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
+    "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "isbot": "^5.1.26",
-    "lucide-react": "^0.488.0",
+    "isbot": "^5.1.27",
+    "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.0",
+    "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "unified": "^11.0.5"
   },
   "devDependencies": {
     "@deno/vite-plugin": "^1.0.2",
-    "@react-router/dev": "^7.5.0",
-    "@tailwindcss/vite": "^4.1.4",
+    "@react-router/dev": "^7.5.3",
+    "@tailwindcss/vite": "^4.1.5",
     "@mdx-js/rollup": "^3.1.0",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "@types/mdx": "^2.0.13",
-    "tailwindcss": "^4.1.4",
-    "vite": "^6.3.0",
+    "tailwindcss": "^4.1.5",
+    "vite": "^6.3.4",
     "vite-imagetools": "^7.0.5",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "rehype-mathjax": "^7.1.0",
-    "shiki": "^3.2.2",
-    "@shikijs/langs": "^3.2.2",
-    "@shikijs/rehype": "^3.2.2",
-    "@shikijs/themes": "^3.2.2"
+    "shiki": "^3.3.0",
+    "@shikijs/langs": "^3.3.0",
+    "@shikijs/rehype": "^3.3.0",
+    "@shikijs/themes": "^3.3.0"
   }
 }
